--- a/_includes/themes/the-program/post.html
+++ b/_includes/themes/the-program/post.html
@@ -1,3 +1,6 @@
+<style type="text/css">
+.entry-content img{width:100%;}
+</style>
 <article class="unit-article layout-post">
 	<div class="unit-inner unit-article-inner">
 		<div class="content">
