--- a/assets/themes/the-program/css/style.css
+++ b/assets/themes/the-program/css/style.css
@@ -429,10 +429,10 @@ h1,
 }
 h2,
 .h2 {
-  font-size: 30px;
-  line-height: 52px;
+  /*font-size: 30px;
+  line-height: 52px;*/
   margin-top: 52px;
-  margin-bottom: 26px;
+  /*margin-bottom: 26px;*/
 }
 h3,
 .h3 {
@@ -653,7 +653,7 @@ pre {
 .unit-article .entry-content:first-child h4,
 .unit-article .entry-content:first-child h5,
 .unit-article .entry-content:first-child h6 {
-  margin-top: 0;
+  margin-top: 2;
 }
 .unit-article a:link {
   border-bottom: 1px dashed #c26164;
